# Retail-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt
ai/: README.md  __init__.py  agent.py  assistant.py  chart_generator.py  config.py  conversation_memory.py  insight_generator.py  llm.py  prompt_builder.py  result_formatter.py  schema_loader.py  sql_executor.py  sql_validator.py
airflow/: README.md
analytics/: README.md  analytics_manager.py  config.py  dim_builder.py  fact_builder.py  star_schema.py  utils.py
config/: __init__.py  constants.py  exceptions.py  logging_config.py  pipeline_run.py  settings.py
dashboard/: README.md  __init__.py  app.py  config.py
data_generator/: README.md  __init__.py  config.py  customer_generator.py  generate_all.py  inventory_generator.py  order_generator.py  payment_generator.py  product_generator.py  review_generator.py  shipping_generator.py  utils.py  website_events_generator.py
docs/: ai_assistant.md  airflow.md  architecture.md  dashboard.md  data_flow.md  database_schema.md  deployment.md  developer_guide.md  project_scope.md  roadmap.md  spark.md
extract/: README.md  __init__.py  api_extractor.py  csv_extractor.py  exceptions.py  extractor.py  ingestion_manager.py  json_extractor.py  metadata.py  registry.py  utils.py
load/: __init__.py
scripts/: health_check.py  run_pipeline_locally.py  setup_project.py  verify_environment.py
spark/: README.md  base_job.py  config.py  spark_session.py  warehouse_writer.py
(+129 files in other folders)
